--- a/Template5.css
+++ b/Template5.css
@@ -29,16 +29,15 @@ vertical-align: middle;
  background-color: #ffdddd;
 }
 .content-janejohn{
- width: 980px;
+ max-width: 1000px;
 margin-left: auto;
  margin-right: auto;
  padding: 32px 16px;
 
 }
 .content-janejohn img{
-    border-radius: 4px;
-    vertical-align: middle;
-   
+
+    padding:16px 0;
 }
 .content-janejohn a{
     text-decoration: none;
@@ -46,6 +45,12 @@ margin-left: auto;
    background-color: black;
    color: white;
    margin: 32px 0;
+}
+.content-janejohn h1{
+    text-align: center; color:#757575; padding:24px 0; font-size: 36px;
+}
+.content-janejohn p{
+    padding: 16px 0; line-height: 2; font-size: 16px;
 }
 .img-invited{
     background-image: url('images/flowers.jpg');
@@ -69,56 +74,97 @@ margin-left: auto;
     float: left;
     text-align: center;
 }
-nav ul{
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    background-color: white;
-    overflow: hidden;
-}
-nav a{
-    color: black;
-    text-decoration: none;
-    padding: 8px 16px;
-    display: inline-block;
-    
-}
-nav a:hover{
-    background-color: #ccc;
-}
-nav li{
-    float:left;
-    width: 25%;
-    text-align: center;
-    padding: 8px 16px;
-    
-}
-nav{
+.top{
     z-index: 1;
     width: 100%;
     bottom: 0;
     position: fixed;
+    background-color: white;
     opacity: 0.7;
-}
+    padding: 8px 16px;
 
-html, body {
+}
+.top:hover{
+    opacity: 1;
+}
+.top a{
+    color: black;
+    text-decoration: none;
+    padding: 8px 16px;
+    float:left;
+    width: 25%;
+    text-align: center;
+    
+}
+.top a:hover{
+    background-color: #ccc;
+}
+.rsvp-content{
+   
+    text-align: center; background-color: #ffdddd!important;
+    padding: 80px 0;
+    line-height: 1.5;
+    letter-spacing: 4px; 
+}
+.rsvp-content p{
+    padding: 24px;
+    
+}
+.rsvp-content a{
+    padding: 16px 56px;
+    background-color:#f44336;
+    opacity: 0.7;
+    text-decoration: none;
+    color:white;
+    font-size: 22px;
+    border-radius: 4px;
+
+}
+.rsvp-content a:hover{
+    
+background-color: #ccc;
+color: black;
+}
+.rsvp-content h1{
+    font-size:34px;
+}
+.rsvp-content h3{
+    font-size:16px;padding:8px 0px;
+}
+footer p{
+    padding: 48px;
+    background-color:black; color:white;
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 32px;
+}
+footer a{
+   color: white;
+}
+footer a:hover{
+    color: green;
+ }
+html,body {
     font-family: Verdana, sans-serif;
     font-size: 15px;
     line-height: 1.5;
 
 }
-h1,h2{
+h1, h2 {
     font-family: "Raleway", sans-serif;
+    font-size: 20px;
 }
+
 h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     margin: 10px 0;
+    font-family: "Raleway", sans-serif;
 }
 @media screen and (max-width:601px){
     .col{
         width: 100%;
     }
-    nav{
+    .top{
         display: none;
     }
 }
